[package]
name = "cardcrusher"
version = "0.0.1"
edition = "2021"
description = "A Yu-Gi-Oh!-style rules engine in Rust (a from-scratch reimagining of ygopro-core)."
license = "AGPL-3.0-or-later"

[dependencies]
# Arena storage with generational keys: our "safe pointers" + free deleted-object tombstone.
slotmap = "1"
# The exact PRNG the reference engine uses — lets us byte-diff against ygopro-core.
rand_xoshiro = "0.6"
rand_core = "0.6"

# The card DSL runtime. Lua, embedded via `mlua`. We build Lua from source
# (`vendored`) so there's no system-Lua dependency and every build is identical.
# Lua's coroutines are why we picked it: a card's `resolve`/`target` can pause
# mid-run to ask the player something, then resume — no interpreter can do that
# without real coroutines.
mlua = { version = "0.12", features = ["lua54", "vendored"] }

[lib]
name = "cardcrusher"
